--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <textarea name="inputed" maxlength="6" id="inputed" placeholder="限輸6字"></textarea><!-- 提供使用者輸入文字欄-->
         </label>
         <br>
-        <button id="sentimg" onClick="PostImageToFacebook(authToken)">Post to Facebook</button><!-- 傳送按鈕-->
+        <button id="sentimg" onClick="PostImageToFacebook(window.authToken)">Post to Facebook</button><!-- 傳送按鈕-->
     </div>
     <div class="info"></div><!-- 訊息欄位-->
 
