--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          <h5>Edit your Facebook Profile Picture here:</h5>
         <canvas width="540" height="540" id="canvas"></canvas>
     </section>
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div class="fb-like" data-href="http://s885219s.github.io/wp2014s_hw4/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
     <div class="inputtext" style="width:600px; margin:0 auto;">
         <label for="inputed">輸入客製化文字：
             <textarea name="inputed" maxlength="6" id="inputed" placeholder="限輸6字"></textarea><!-- 提供使用者輸入文字欄-->
