--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </section>
     <div class="fb-comments" data-href="http://s885219s.github.io/wp2014s_hw4/" data-numposts="3" data-colorscheme="light"></div>
     <p>
-    <div class="fb-like" data-href="http://s885219s.github.io/wp2014s_hw4/" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
     </p>
     <div class="inputtext" style="width:600px; margin:0 auto;">
         <label for="inputed">輸入客製化文字：
