--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="info"></div><!-- 訊息欄位-->
     <div class="fb-comments" data-href="http://s885219s.github.io/wp2014s_hw4/" data-numposts="3" data-colorscheme="light"></div>
     <p>
-    <div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
+    <div class="fb-like" data-href="http://s885219s.github.io/wp2014s_hw4/" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div>
     </p>
     
 
